# Minicoder

./: .gitignore  LICENSE  MODEL_CHOICE.md  README.md  gradlew.bat  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: deepseek-coder-1.3b-q4.gguf
app/src/main/cpp/: CMakeLists.txt  minicode_jni.cpp  minicode_llama_impl.h
app/src/main/java/com/minicode/: ClipboardUtil.kt  Constants.kt  DiffUtil.kt  FileManager.kt  LlmEngine.kt  MainActivity.kt  MinicodeApp.kt  StatePersistence.kt  StreamCallback.kt  UiState.kt
app/src/main/res/drawable/: bg_input_bar.xml  bg_output_card.xml  bg_send_button.xml  ic_minicode.xml  ic_send_arrow.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
